# assignments-3-and-later-rishap777

./: CMakeLists.txt  testfile.txt
assignments/assignment2/: cross-compile.txt
examples/autotest-validate/: autotest-validate-main.c  autotest-validate.c
examples/systemcalls/: systemcalls.c  systemcalls.h
examples/threading/: threading.c  threading.h
finder-app/: Makefile  finder-test.sh  manual-linux.sh  sample.txt  writer.c  writer.sh
finder-app/outdir/rootfs/home/: finder.sh  username.txt
server/: Makefile  aesdsocket  aesdsocket-start-stop  aesdsocket.c
student-test/assignment1/: Test_validate_username.c
